# DesktopFileMaker

./: .gitignore  APPIMAGE_IMPLEMENTATION.md  ARCH_SETUP.md  AUR-GUIDE.md  DEVELOPMENT.md  INSTALL_TEST.md  LICENSE  Makefile  PKGBUILD  PKGBUILD-git  QUICKSTART.md  README.md  RELEASING.md  START_HERE.md  build-appimage-fast.sh  build-appimage.sh  install.sh  pyproject.toml  requirements.txt  run.sh  setup.py  test-aur.sh  test.sh  uninstall.sh
.github/workflows/: release.yml
appimage/: desktop-file-maker.desktop  generate_icon.py  generate_menu_icon.py
src/: main.py
src/core/: __init__.py  desktop_file.py  file_system.py  icon_handler.py  icon_search.py  validation.py
src/tui/: __init__.py  app.py
src/tui/screens/: __init__.py
src/tui/widgets/: __init__.py  exec_suggester.py  icon_path_suggester.py  icon_picker.py  icon_selector.py  smart_input.py
tests/: test_desktop_file.py  test_exec_suggester.py  test_file_system.py  test_icon_path_suggester.py  test_icon_search.py  test_validation.py
