[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "desktop-file-maker"
version = "0.1.0"
description = "A modern Linux TUI application for creating and managing .desktop files"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ethan Kovach"}
]
maintainers = [
    {name = "Ethan Kovach"}
]
keywords = ["linux", "desktop", "tui", "appimage", "desktop-entry"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Utilities",
]

dependencies = [
    "textual>=0.47.0",
    "requests>=2.31.0",
    "duckduckgo-search>=4.0.0",
    "pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.urls]
Homepage = "https://github.com/NerfEko/DesktopFileMaker"
Repository = "https://github.com/NerfEko/DesktopFileMaker.git"
Issues = "https://github.com/NerfEko/DesktopFileMaker/issues"

[project.scripts]
desktop-file-maker = "src.main:main"

[tool.setuptools]
packages = ["src", "src.core", "src.tui", "src.tui.widgets"]

[tool.setuptools.package-data]
src = ["*.css", "*.tcss"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
]
